--- a/exercise6.css
+++ b/exercise6.css
@@ -3,6 +3,9 @@
 #e6 .container {
     height: 500px;
     width: 1000px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-around;
 }
 
 #e6 .item {
