--- a/exercise7.css
+++ b/exercise7.css
@@ -2,10 +2,13 @@
 
 #e7 .container {
     height: 200px;
+    display: flex;
+    flex-direction: column;
 }   
 
 #e7 .item {
     height: auto;
+    
 }
 
 #e7 .i1 {
