--- a/exercise6.css
+++ b/exercise6.css
@@ -4,11 +4,14 @@
     height: 500px;
     width: 1000px;
     display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: space-between;
+    
 }
 
 #e6 .item {
     height: 100px;
     width: 400px;
+    
 }
