--- a/exercise8.css
+++ b/exercise8.css
@@ -3,6 +3,10 @@
 #e8 .container {
     height: 200px;
     width: 200px;
+    display: flex;
+    justify-content: right;
+    align-content: center;
+    align-items: center;
 }
 
 #e8 .item {
